# perplexity-mcp

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/: __init__.py  __main__.py  _client.py  client.py  main.py  perplexity.py
src/perplexity_mcp/: __init__.py  config.py  guards.py  request.py  types.py
src/perplexity_mcp/tools/: __init__.py  chat.py  embed.py  models.py  moderate.py  search.py
