[project]
name = "perplexity-mcp"
version = "1.0.0"
description = "Perplexity AI MCP server - search and chat"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dedalus-mcp>=0.1.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.metadata]
allow-direct-references = true